2006-08-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/autocrop.c: fixed the check for an empty image.

2006-08-10  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/xcf/xcf-private.h
	* app/xcf/xcf-load.c
	* app/xcf/xcf-save.c: save sample points in xcf files,
	and load them.  Fixes bug #342480.

2006-08-10  Sven Neumann  <sven@gimp.org>

	* app/file/file-utils.c: added a copy of g_unescape_uri_string()
	from glib/gconvert.c and use it to improve the results of
	file_utils_uri_display_name() and file_utils_uri_display_basename().

2006-08-10  Sven Neumann  <sven@gimp.org>

	* app/dialogs/file-save-dialog.c: use gimp_message().

	* app/dialogs/preferences-dialog.c: use a GtkMessageDialog and
	make it transient for the preferences dialog.

	* libgimpwidgets/gimppropwidgets.c
	(gimp_prop_file_chooser_button_notify): use
	gtk_file_chooser_unselect_all() to unset the filename.

2006-08-10  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpimagemaptool.c: for load and save errors, use a
	GtkMessageDialog and make it transient for the tool dialog.

	* app/tools/gimpvectortool.c: use gimp_message().

2006-08-10  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpimagemaptool.[ch]
	* app/tools/gimpcurvestool.c
	* app/tools/gimplevelstool.c: improved error handling for
	gimp_image_map_tool_settings_load().

	* app/tools/gimpposterizetool.c: added missing include.

	* app/config/gimpconfig-file.c: rephrased error messages.

2006-08-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/metadata/interface.c (metadata_dialog): set a border
	width of 12 on the toplevel container.

2006-08-10  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/oilify.c (run): the plug-in has one return
	value, not two (the trigger of the crasher in bug #350555).

2006-08-09  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/plug-in-params.c (plug_in_params_to_args): it's a
	bad idea to access an array before checking if it's long enough.